Fix the spacing

--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,20 @@ textarea,
   border-bottom: 1px solid #70ad55;
 }
 
+.padright {
+  padding-right: 1rem;
+}
+
+.option {
+  color: #6e8c62;
+}
+
+.btn {
+  background-color: #6e8c62;
+  border: #6e8c62;
+  padding: .75rem 2rem;
+}
+
 footer {
   color: #fff;
 }
